# routes/auth.js
@@ -12,6 +12,7 @@ const Teacher = require('../models/Teacher');
 const Student = require('../models/Student');
 
 // Local functions
+const { sendResetPasswordMail } = require('../utils/mailer');
 const logger = require('../logger');
 
 dotenv.config();
@@ -34,8 +35,8 @@ router.post('/signup', [
     if (validatePassword(req.body.password) === false) {
         return res.status(400).json({ status: 'error', message: "Password should be of 8 characters long and should be less than 16 characters. It should contain at least one uppercase, one lowercase, and one number" });
     }
-    const salt = await bcrypt.genSalt(10);
-    const hashedPassword = await bcrypt.hash(req.body.password, salt);
+    const salt = bcrypt.genSalt(process.env.SALT_ROUNDS);
+    const hashedPassword = bcrypt.hash(req.body.password, salt);
     try {
         const admin = await Admin.create({
             name: req.body.name,
@@ -117,6 +118,112 @@ router.post('/login', [
         }
     } catch (error) {
         logger.error('Login failed: ', error);
+        res.status(500).json({ status: 'error', message: error.message });
+    }
+});
+
+// ============================================================================================================
+
+// Forgot Password - Admin
+router.post('/forgot-password', [
+    body('email', 'Enter a valid email').isEmail(),
+], async (req, res) => {
+    logger.info('Forgot password request received');
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        logger.error('Forgot password request failed');
+        return res.status(400).json({ status: 'error', errors: errors.array() });
+    }
+    try {
+        logger.info('Processing forgot password request');
+        const admin = await Admin.findOne({ email: req.body.email });
+        logger.debug('Admin details: ' + admin);
+        if (admin === null) {
+            logger.error('Forgot password failed: No user found');
+            return res.status(404).json({ status: 'error', message: 'User not found' });
+        }
+
+        const token = jwt.sign({ id: admin._id, isAdmin: true }, JWT_SECRET, { expiresIn: '20m' });
+        logger.debug('Token: ' + token);
+
+        sendResetPasswordMail(admin.email, admin.name, token);
+        res.status(200).json({ status: 'success', message: 'Password reset link sent to your email' });
+    } catch (error) {
+        logger.error('Forgot password request failed: ', error);
+        res.status(500).json({ status: 'error', message: error.message });
+    }
+});
+
+// ============================================================================================================
+
+// GET-Reset Password - Admin
+router.get('/reset-password/:token', async (req, res) => {
+    logger.info('Reset password token received');
+    try {
+        logger.info('Processing request further');
+        const decode = jwt.verify(req.params.token, JWT_SECRET);
+        logger.debug('Decoded token: ' + decode);
+
+
+        const admin = await Admin.findOne({ _id: decode.id });
+        logger.debug('Admin details: ' + admin);
+        if (admin === null) {
+            logger.error('Reset password failed: No user found');
+            return res.status(404).json({ status: 'error', message: 'User not found' });
+        }
+
+        res.status(200).json({ status: 'success', message: 'Verified, now you can enter new password', token: req.params.token });
+    } catch (error) {
+        logger.error('Reset password request failed: ', error);
+        res.status(500).json({ status: 'error', message: error.message });
+    }
+});
+
+// ============================================================================================================
+
+// POST-Reset Password - Admin
+router.post('/reset-password/:token', [
+    body('password', 'Password cannot be blank').exists(),
+    body('confirmPassword', 'Passwords do not match').custom((value, { req }) => {
+        if (value !== req.body.password) {
+            throw new Error('Passwords do not match');
+        }
+        return true;
+    }),
+], async (req, res) => {
+    logger.info('Reset password request received');
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        logger.error('Reset password request failed');
+        return res.status(400).json({ status: 'error', errors: errors.array() });
+    }
+    if (validatePassword(req.body.password) === false) {
+        return res.status(400).json({ status: 'error', message: "Password should be of 8 characters long and should be less than 16 characters. It should contain at least one uppercase, one lowercase, and one number" });
+    }
+    try {
+        logger.info('Processing reset password request');
+        const decoded = jwt.verify(req.params.token, JWT_SECRET);
+        logger.debug('Decoded token: ' + decoded);
+
+        const admin = await Admin.findOne({ _id: decoded.id });
+        logger.debug('Admin found: ' + admin);
+        if (admin === null) {
+            logger.error('Reset password failed: No user found');
+            return res.status(404).json({ status: 'error', message: 'User not found' });
+        }
+
+        const salt = bcrypt.genSalt(process.env.SALT_ROUNDS);
+        const hashedPassword = bcrypt.hash(req.body.password, salt);
+
+        logger.debug('Hashed password: ' + hashedPassword);
+        admin.password = hashedPassword;
+        await admin.save();
+        
+        logger.info('Reset password successful');
+        logger.debug('Admin details: ' + admin);
+        res.status(200).json({ status: 'success', message: 'Password reset' });
+    } catch (error) {
+        logger.error('Reset password failed: ', error);
         res.status(500).json({ status: 'error', message: error.message });
     }
 });
